Fix: sticky filters on mobile

--- a/assets/css/_common.scss
+++ b/assets/css/_common.scss
@@ -126,7 +126,7 @@ body.woocommerce-checkout .woocommerce form .form-row .required {
 
             .woocommerce-product-gallery {
                 .slick-slide {
-                    pointer-events: none;
+                    // pointer-events: none;
                 }
             }
 
