--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,6 +1,6 @@
 body.home {
     #content.site-content {
-        padding-top: 15rem;
+        padding-top: 9rem;
 
         .container-full {
             & > div.row {
@@ -47,6 +47,12 @@ body.home {
     }
 }
 @media only screen and (min-width:48em){
+    body.home {
+        #content.site-content {
+            padding-top: 15rem;
+        }
+    }
+    
     .woocommerce {
         .products {
             li.product {
